style: fix icon spacing in footer

--- a/sass/layouts/_homepage.scss
+++ b/sass/layouts/_homepage.scss
@@ -190,15 +190,13 @@
         line-height: 25px;
 
         .list-flex-container {
-            @include flexhorizontal(flex-start);
+            display: flex;
+            align-items: center;
 
             i {
                 font-size: 11px;
-                display: inline-flex;
-                justify-content: center;
-                align-items: center;
-                position: absolute;
-                left: -5px;
+                width: 11px;
+                margin-right: 10px;
             }
         }
     }
